--- a/pom.xml
+++ b/pom.xml
@@ -114,3 +114,21 @@
         </plugins>
     </build>
 </project>
+
+<build>
+<plugins>
+    <plugin>
+        <!-- Build an executable JAR -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+            <archive>
+                <manifestFile>src\main\java\META-INF\MANIFEST.MF</manifestFile>
+                <manifest>
+                    <addClasspath>true</addClasspath>
+                </manifest>
+            </archive>
+        </configuration>
+    </plugin>
+</plugins>
+</build>
